--- a/prms-bi-client/src/index.html
+++ b/prms-bi-client/src/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
-  <script src="https://raw.githubusercontent.com/Microsoft/PowerBI-JavaScript/master/dist/powerbi.js"></script>
+  <script src="node_modules/powerbi-client/dist/powerbi.js"></script>
 </head>
 
 <body>
