--- a/prms-bi-client/src/index.html
+++ b/prms-bi-client/src/index.html
@@ -8,12 +8,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
-  <script src="node_modules/powerbi-client/dist/powerbi.js"></script>
-  <script src="http://localhost:4200/widget/main.js"></script>
+  <!-- <script src="http://localhost:4200/widget/main.js"></script> -->
+  <!-- <script src="node_modules/powerbi-client/dist/powerbi.js"></script> -->
+
 </head>
 
 <body>
   <app-root></app-root>
+
 </body>
 
 </html>
