--- a/prms-bi-client/src/index.html
+++ b/prms-bi-client/src/index.html
@@ -10,7 +10,7 @@
   <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script> -->
   <!-- <script src="http://localhost:4200/widget/main.js"></script> -->
   <!-- <script src="node_modules/powerbi-client/dist/powerbi.js"></script> -->
-
+  <script type="module" src="widget/dist/prms-bi-components/prms-bi-components.esm.js"></script>
 </head>
 
 <body>
