--- a/prms-bi-client/src/index.html
+++ b/prms-bi-client/src/index.html
@@ -10,12 +10,13 @@
   <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script> -->
   <!-- <script src="http://localhost:4200/widget/main.js"></script> -->
   <!-- <script src="node_modules/powerbi-client/dist/powerbi.js"></script> -->
-
+  <!-- <script type="module" src="widget/dist/prms-bi-components/prms-bi-components.esm.js"></script> -->
+  <!-- <script type="module" src="widget/dist/ibdevkit/ibdevkit.esm.js"></script> -->
+  <!-- <script type="module" src="http://10.10.150.67:8080/ibdevkit.esm.js"></script> -->
 </head>
 
 <body>
   <app-root></app-root>
-
 </body>
 
 </html>
